--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Glarus isnt real</title>
 </head>
 <body>
@@ -16,6 +17,30 @@
 					<a href="#beweise">Beweise</a>
 					<a href="#">Ganzes Wissen</a>
 				</ul>
+				
+				<!-- Hamburger Menu -->
+				<div class="topnav">
+				  <!-- Navigation links (hidden by default) -->
+				  <div id="myLinks">
+					<a id="firstBurgerLink" href="index.html">Home</a>
+					<a href="#beweise">Beweise</a>
+					<a href="#">Ganzes Wissen</a>
+				  </div>
+				  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+				  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<i class="fa fa-bars"></i>
+				  </a>
+				</div>
+				<script>
+					function myFunction() {
+					  var x = document.getElementById("myLinks");
+					  if (x.style.display === "block") {
+						x.style.display = "none";
+					  } else {
+						x.style.display = "block";
+					  }
+					}
+				</script>
 
 				<div><img src="img/gir-logo.jpg" alt="Logo Glarus isnt real"></div>
 			</nav>
