--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				<div class="topnav">
 				  <!-- Navigation links (hidden by default) -->
 				  <div id="myLinks">
-					<a id="firstBurgerLink" href="index.html">Home</a>
-					<a href="#beweise">Beweise</a>
-					<a href="#">Ganzes Wissen</a>
+					<a onclick="myFunction()" id="firstBurgerLink" href="index.html">Home</a>
+					<a onclick="myFunction()" href="#beweise">Beweise</a>
+					<a onclick="myFunction()" href="#">Ganzes Wissen</a>
 				  </div>
 				  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 				  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
