--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<!----Beginn-Artikel----->
 			<article>
 				<div>
-					<img src="img/banner.jpg" alt="Beweis 1"> 
+					<img src="img/schweiz-ohne-glarus-thumbnail.jpg" alt="Beweis 1"> 
 				</div>
 				<section>
 					<h3>01</h3>
