--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				</div>
 				<section>
 					<h3>01</h3>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du die Fakten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen und die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
 					<a href="#">Zum ganzen Beitrag</a>
 				</section>
 			</article>
