--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Glarus isnt real</title>
+<title>Glarus isnt real | Home</title>
 </head>
 <body>
 	<section id="landing">
@@ -15,7 +15,7 @@
 				<ul>
 					<a href="index.html">Home</a>
 					<a href="#beweise">Beweise</a>
-					<a href="#">Ganzes Wissen</a>
+					<a href="ganzes_wissen.html">Ganzes Wissen</a>
 				</ul>
 				
 				<!-- Hamburger Menu -->
@@ -24,7 +24,7 @@
 				  <div id="myLinks">
 					<a onclick="myFunction()" id="firstBurgerLink" href="index.html">Home</a>
 					<a onclick="myFunction()" href="#beweise">Beweise</a>
-					<a onclick="myFunction()" href="#">Ganzes Wissen</a>
+					<a onclick="myFunction()" href="ganzes_wissen.html">Ganzes Wissen</a>
 				  </div>
 				  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 				  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -106,12 +106,14 @@
 					<img src="img/beweis1.jpg" alt="Beweis 1">
 				</div>
 				<section>
-					<h3>02</h3>
+					<h3>04</h3>
 					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 					<a href="#">Zum ganzen Beitrag</a>
+					<div class="clear"></div>
 				</section>
 			</article>
 			<!-----Ende-Artikel------>
+			
 			
 			<!----Beginn-Artikel----->
 			<article>
@@ -120,8 +122,9 @@
 				</div>
 				<section>
 					<h3>01</h3>
-					<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du die Fakten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen und die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
+					<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du akten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen uns die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von Zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
 					<a href="#">Zum ganzen Beitrag</a>
+					<div class="clear"></div>
 				</section>
 			</article>
 			<!-----Ende-Artikel------>
