--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -14,7 +14,7 @@
 			<nav>
 				<ul>
 					<a href="index.html">Home</a>
-					<a href="#beweise">Beweise</a>
+					<a href="index.html#beweise">Beweise</a>
 					<a href="#">Ganzes Wissen</a>
 				</ul>
 				
