--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<!-- 				Navigation				   -->
 			<nav>
 				<ul>
-					<a href="index.html">Home</a>
+					<a href="#">Home</a>
 					<a href="#beweise">Beweise</a>
 					<a href="ganzes_wissen.html">Ganzes Wissen</a>
 				</ul>
@@ -22,7 +22,7 @@
 				<div class="topnav">
 				  <!-- Navigation links (hidden by default) -->
 				  <div id="myLinks">
-					<a onclick="myFunction()" id="firstBurgerLink" href="index.html">Home</a>
+					<a onclick="myFunction()" id="firstBurgerLink" href="#">Home</a>
 					<a onclick="myFunction()" href="#beweise">Beweise</a>
 					<a onclick="myFunction()" href="ganzes_wissen.html">Ganzes Wissen</a>
 				  </div>
@@ -57,7 +57,7 @@
 
 							<script>
 							// Set the date we're counting down to
-							var countDownDate = new Date("May 30, 2023 15:38:00").getTime();
+							var countDownDate = new Date("May 23, 2023 15:38:00").getTime();
 
 							// Update the count down every 1 second
 							var x = setInterval(function() {
