--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -23,7 +23,7 @@
 				  <!-- Navigation links (hidden by default) -->
 				  <div id="myLinks">
 					<a onclick="myFunction()" id="firstBurgerLink" href="index.html">Home</a>
-					<a onclick="myFunction()" href="#beweise">Beweise</a>
+					<a onclick="myFunction()" href="index.html#beweise">Beweise</a>
 					<a onclick="myFunction()" href="#">Ganzes Wissen</a>
 				  </div>
 				  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
