--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<section>
 					<h3>01</h3>
 					<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du akten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen uns die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von Zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
-					<a href="#">Zum ganzen Beitrag</a>
+					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
 			</article>
