--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -13,8 +13,8 @@
 			<!-- 				Navigation				   -->
 			<nav>
 				<ul>
-					<a href="index.html">Home</a>
-					<a href="index.html#beweise">Beweise</a>
+					<a href="home.html">Home</a>
+					<a href="home.html#beweise">Beweise</a>
 					<a href="#">Ganzes Wissen</a>
 				</ul>
 				
@@ -22,8 +22,8 @@
 				<div class="topnav">
 				  <!-- Navigation links (hidden by default) -->
 				  <div id="myLinks">
-					<a onclick="myFunction()" id="firstBurgerLink" href="index.html">Home</a>
-					<a onclick="myFunction()" href="index.html#beweise">Beweise</a>
+					<a onclick="myFunction()" id="firstBurgerLink" href="home.html">Home</a>
+					<a onclick="myFunction()" href="home.html#beweise">Beweise</a>
 					<a onclick="myFunction()" href="#">Ganzes Wissen</a>
 				  </div>
 				  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
