--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -67,7 +67,18 @@
 				<div class="wissenBildContainer">
 					<img src="img/schweiz-ohne-glarus.jpg" alt="Beweis 1">
 				</div>
-				<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du Fakten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen uns die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von Zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
+				<p>Willkommen auf der Seite der Wahrheit. Wann warst du das letzte Mal in Glarus? Noch nie? Das erstaunt uns nicht. Im folgenden Text werden laufend neue Fakten über Glarus enthüllt, Sie finden die News unter dem letzten Beitrag des Navigationspunktes "Beweise". 
+
+				Nun beginnt die Ära der Demaskierung von Glarus.
+
+				Der Kanton Glarus ist ein Kanton in der Schweiz. Er befindet sich im östlichen Teil des Landes und grenzt an die Kantone St. Gallen, Schwyz und Graubünden. Die Hauptstadt des Kantons ist Glarus (Sehr Suspekt). 
+
+				"Die Glarner Alpen erstrecken sich über einen Grossteil des Kantons und bieten vielfältige Möglichkeiten für Outdoor-Aktivitäten wie Wandern, Skifahren und Bergsteigen. Die Landschaft des Kantons Glarus ist geprägt von hohen Bergen, tiefen Tälern und malerischen Seen."
+
+				Doch wenn die Landschaft viele Möglichkeiten für Outdoor-Aktivitäten bietet, wieso redet niemand über den Kanton? Das Geheimnis liegt weit unter den malerischen Seen des Kantons. Denn die friedlichen und unberührten Seen beheimaten ein tiefes Geheimnis. Denn Elon Musk hat gemeinsam mit weiteren Machthabern Lagerhallen auf den Seegrund bauen lassen. 
+
+				Doch wofür diese Lagerhallen verwendet werden und Beweise für die Existenz erhalten Sie im nächsten Beitrag. Bis dahin heisst es: "Bist du noch ein Glarus-Believer oder bist du schon von den Fesslen des Staates befreit?"
+				</p>
 			</article>
 			
 			
