--- a/home.html
+++ b/home.html
@@ -122,7 +122,9 @@
 				</div>
 				<section>
 					<h3>01</h3>
-					<p>Wir heissen dich herzlich willkommen auf der Seite der Wahrheit. Hier erhältst du akten über den angeblich 26. Kanton der Schweiz. Seit 1352 verschweigen uns die einflussreichen Machthaber von Glarus die verstörenden Geheimnisse über den Kanton. Aber genug des blinden Glaubens! Von Zeit zu Zeit werden hier weitere Artikel hochgeladen, in denen du die Wahrheit erfährst.</p>
+					<p>Willkommen auf der Seite der Wahrheit. Wann warst du das letzte Mal in Glarus? Noch nie? Das erstaunt uns nicht. Im folgenden Text werden laufend neue Fakten über Glarus enthüllt, Sie finden die News unter dem letzten Beitrag des Navigationspunktes "Beweise". 
+
+					Nun beginnt die Ära der Demaskierung von Glarus.</p>
 					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
