--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body id="getAccessBody">
 	
 	<div id="getAccess">
-		<h4>Hiermit bestätige ich, dass ich nicht Elon Musk bin!</h4>
+		<h4>Verifizierung erforderlich</h4>
+		<p>Hiermit bestätige ich, dass ich nicht Elon Musk oder ein glarner Machthaber bin!</p>
 		<input type="checkbox" id="confirm"  onclick="validate()"/>
 		<div class="wrapper" id="loadingAnimation"> <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/> <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg></div>
 	</div>
