--- a/home.html
+++ b/home.html
@@ -122,9 +122,11 @@
 				</div>
 				<section>
 					<h3>01</h3>
-					<p>Willkommen auf der Seite der Wahrheit. Wann warst du das letzte Mal in Glarus? Noch nie? Das erstaunt uns nicht. Im folgenden Text werden laufend neue Fakten über Glarus enthüllt, Sie finden die News unter dem letzten Beitrag des Navigationspunktes "Beweise". 
-
-					Nun beginnt die Ära der Demaskierung von Glarus.</p>
+					<p>Willkommen auf der Seite der Wahrheit. Wann warst du das letzte Mal in Glarus? Noch nie? Das erstaunt uns nicht.<br>
+					<br>
+					Nun beginnt die Ära der Demaskierung von Glarus. <br>
+					<br>
+					Der Kanton Glarus ist ein Kanton in der Schweiz. Er befindet sich im östlichen Teil des Landes und grenzt an die Kantone St. Gallen, Schwyz und Graubünden. Die Hauptstadt des Kantons ist Glarus (Sehr Suspekt).</p>
 					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
