--- a/home.html
+++ b/home.html
@@ -124,9 +124,7 @@
 					<h3>01</h3>
 					<p>Willkommen auf der Seite der Wahrheit. Wann warst du das letzte Mal in Glarus? Noch nie? Das erstaunt uns nicht.<br>
 					<br>
-					Nun beginnt die Ära der Demaskierung von Glarus. <br>
-					<br>
-					Der Kanton Glarus ist ein Kanton in der Schweiz. Er befindet sich im östlichen Teil des Landes und grenzt an die Kantone St. Gallen, Schwyz und Graubünden. Die Hauptstadt des Kantons ist Glarus (Sehr Suspekt).</p>
+					Nun beginnt die Ära der Demaskierung von Glarus. <br></p>
 					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
