--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -77,7 +77,7 @@
 					<br>
 					Doch wenn die Landschaft viele Möglichkeiten für Outdoor-Aktivitäten bietet, wieso redet niemand über den Kanton? Das Geheimnis liegt weit unter den malerischen Seen des Kantons. Denn die friedlichen und unberührten Seen beheimaten ein tiefes Geheimnis. Elon Musk hat gemeinsam mit weiteren Machthabern Lagerhallen auf den Seegrund bauen lassen. <br>
 					<br>
-					Doch wofür diese Lagerhallen verwendet werden und Beweise für die Existenz erhalten Sie im nächsten Beitrag. Bis dahin heisst es: "Bist du noch ein Glarus-Believer oder bist du schon von den Fesseln des Unwissens befreit?"
+					
 				</p>
 			</article>
 			
@@ -85,16 +85,23 @@
 			
 			<article class="wissenArtikel" id="newArticle">
 				<div class="wissenBildContainer">
-					<img src="img/schweiz-ohne-glarus.jpg" alt="Beweis 1">
+					<img src="img/pigeon-drone.jpg" alt="Beweis 2">
 				</div>
 					<p>
-						Test Test Test Test Test Test Test 
+						Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, ein so viele Informationen darüber zu sammeln wie nur möglich. <br>
+						<br>
+						Eine Hauptverwendung für diese Hallen ist das Sammeln und Evaluieren von Daten über die Bürgerinnen und Bürger der Schweiz. Das Sammeln der Daten gelingt durch technisch höchst innovative Flugroboter namens Vögel. Diese "Government-Drones", zu Deutsch Regierungsdrohnen, sammeln über den Zeitraum von circa 6 Monaten Daten über uns und Fliegen dann in die unterirdischen Lagerhallen, um dort die Daten auf den lokalen Server zu laden. <br>
+						<br>
+						Ein Beweis für diese Aktivität ist das höchst suspekte Verhalten von den verschiedensten Vogelrassen. Das plötzliche Verschwinden der Vögel gegen Ende Jahr ist ein handfester Beweis dafür. Die Government-Drones fliegen, wenn der Speicher voll ist mit Daten über uns Bürgerinnen und Bürger (!), in die Lagerhallen in Glarus und laden mit in die Füsse der Vögel integrierten Induktionsüberträger die Daten auf die lokalen Server und erhalten im Gegenzug das neuste Betriebssystem installiert. <br> 
+						<br>
+						Weitere Beweise für die Zusammenarbeit von Elon Musk, Vögel und Glarus erhalten Sie im nächsten Beitrag. Bis dahin heisst es: "I fit flies, it spies – halten sie sich von Government-Drones fern"
+ 
 					</p>
 			</article>
 
 			<script>
 				// Set the date we're counting down to
-				var countDownDate = new Date("May 29, 2023 15:38:00").getTime();
+				var countDownDate = new Date("May 28, 2023 15:38:00").getTime();
 
 				// Update the count down every 1 second
 				var x = setInterval(function() {
