--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
 
 							<script>
 							// Set the date we're counting down to
-							var countDownDate = new Date("May 29, 2023 15:38:00").getTime();
+							var countDownDate = new Date("May 28, 2023 15:38:00").getTime();
 
 							// Update the count down every 1 second
 							var x = setInterval(function() {
@@ -106,8 +106,8 @@
 					<img src="img/beweis1.jpg" alt="Beweis 1">
 				</div>
 				<section>
-					<h3>04</h3>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<h3>02</h3>
+					<p>Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, ein so viele Informationen darüber zu sammeln wie nur möglich. </p>
 					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
