--- a/ganzes_wissen.html
+++ b/ganzes_wissen.html
@@ -88,7 +88,7 @@
 					<img src="img/pigeon-drone.jpg" alt="Beweis 2">
 				</div>
 					<p>
-						Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, ein so viele Informationen darüber zu sammeln wie nur möglich. <br>
+						Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, so viele Informationen darüber zu sammeln wie nur möglich. <br>
 						<br>
 						Eine Hauptverwendung für diese Hallen ist das Sammeln und Evaluieren von Daten über die Bürgerinnen und Bürger der Schweiz. Das Sammeln der Daten gelingt durch technisch höchst innovative Flugroboter namens Vögel. Diese "Government-Drones", zu Deutsch Regierungsdrohnen, sammeln über den Zeitraum von circa 6 Monaten Daten über uns und Fliegen dann in die unterirdischen Lagerhallen, um dort die Daten auf den lokalen Server zu laden. <br>
 						<br>
@@ -126,7 +126,7 @@
 				  if (distance < 0) {
 					clearInterval(x);
 					document.getElementById("demo").innerHTML = "Neuster Artikel:";
-					document.getElementById("newArticle").style.display = "flex";
+					document.getElementById("newArticle").style.display = "block";
 				  }
 				}, 1000);			
 			</script>			
