--- a/home.html
+++ b/home.html
@@ -103,11 +103,11 @@
 			<!----Beginn-Artikel----->
 			<article id="newArticle">
 				<div>
-					<img src="img/beweis1.jpg" alt="Beweis 1">
+					<img src="img/pigeon-drone.jpg" alt="Beweis 2">
 				</div>
 				<section>
 					<h3>02</h3>
-					<p>Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, ein so viele Informationen darüber zu sammeln wie nur möglich. </p>
+					<p>Die gut versteckten Lagerhallen dienen Elon Musk und den weiteren Machthabern aus Glarus dazu, verdeckt und aus dem Schatten heraus zu agieren. Der Zugang in diese Hallen ist höchst schwierig und für Aussenstehende kaum möglich, dennoch sind wir bemüht, so viele Informationen darüber zu sammeln wie nur möglich. </p>
 					<a href="ganzes_wissen.html">Zum ganzen Beitrag</a>
 					<div class="clear"></div>
 				</section>
